kubernetes/counter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: counter-app
